# LinkSanity

./: .coverage  .gitignore  BITACORA.md  README.md  bookmark_report.md  bookmarks_alfabetico.md  bookmarks_organizados.html  chrome_remote.py  estructura.txt  examples.py  fix_bookmarks.py  fix_bookmarks_sync.py  force_organize.py  main.py  processed_lean.json  pyproject.toml  reorganizar_visual.py  requirements.txt  setup.py  test_lean.py  verify_arch.py
docs/: SOLUCION_SYNC.md  agents.md  skills.md
extension/: background.js  manifest.json  popup.html  popup.js
scripts/: chrome_remote.py  examples.py  fix_chrome_sync.py  force_organize.py  visualize.py
src/: __init__.py  bookmark_exporter.py  bookmark_organizer.py  bookmark_reader.py  bookmark_writer.py
src/linksanity/agents/: analyst.py  chronicler.py  curator.py  janitor.py  librarian.py  medic.py  orchestrator.py
src/linksanity/cli/: interface.py
src/linksanity/domain/: models.py
src/linksanity/engine/: io.py  refinery.py
src/linksanity/services/: exporter.py  organizer.py  reader.py  writer.py
src/linksanity/skills/: browser_integration.py  categorization.py  sanitization.py
tests/: test_bookmark_organizer.py  test_bookmark_reader.py
